# android-proxy-setter

./: .gitignore  Android Proxy Setter.dmg  Cargo.toml  Makefile  README.md  audit.md
scripts/: install.sh  uninstall.sh
src/: main.rs
src/adb/: commands.rs  device.rs  mod.rs
src/cli/: interactive.rs  mod.rs
src/config/: args.rs  mod.rs
src/error/: mod.rs  types.rs
src/proxy/: manager.rs  mod.rs  settings.rs
