[package]
name = "android_proxy_setter"
version = "0.1.2"
edition = "2021"

[dependencies]
local-ip-address = "0.5.6"
colored = "2.0"
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
winit = "0.28"
tray-icon = "0.5"
image = "0.24"
once_cell = "1.18"
rfd = "0.11"

[package.metadata.bundle]
name = "Android Proxy Setter"
identifier = "com.krabswong.androidproxysetter"
icon = ["resources/icon.png"]
version = "0.1.1"
copyright = "© 2025 Krabswong"
category = "Developer Tool"
short_description = "A tool to easily set and manage Android device proxy settings"
long_description = """
Android Proxy Setter is a utility tool that allows developers to easily set,
clear, and manage HTTP proxy settings on connected Android devices through ADB.
The application supports both command-line and GUI operation modes.
"""
osx_minimum_system_version = "10.14"
